finished fourth set of kanto provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3806,15 +3806,15 @@ PROV3804;Ushiku;;;;;;;;;;;;;x
 PROV3805;Shimotsuma;;;;;;;;;;;;;x
 PROV3806;Shimodate;;;;;;;;;;;;;x
 PROV3807;Yuki;;;;;;;;;;;;;x
-PROV3808;Port Egmont;;;;;;;;;;;;;x
-PROV3809;Pebble Island;;;;;;;;;;;;;x
-PROV3810;Keppel Island;;;;;;;;;;;;;x
-PROV3811;Hill Cove;;;;;;;;;;;;;x
-PROV3812;Port Louis;;;;;;;;;;;;;x
-PROV3813;Choiseul;;;;;;;;;;;;;x
-PROV3814;Orqueta;;;;;;;;;;;;;x
-PROV3815;San Carlos;;;;;;;;;;;;;x
-PROV3816;Salvador;;;;;;;;;;;;;x
+PROV3808;Sekiyado;;;;;;;;;;;;;x
+PROV3809;Koga;;;;;;;;;;;;;x
+PROV3810;Mibu;;;;;;;;;;;;;x
+PROV3811;Sano;;;;;;;;;;;;;x
+PROV3812;Tatebayashi;;;;;;;;;;;;;x
+PROV3813;Ashikaga;;;;;;;;;;;;;x
+PROV3814;Oshi;;;;;;;;;;;;;x
+PROV3815;Kawagoe;;;;;;;;;;;;;x
+PROV3816;Iwatsuki;;;;;;;;;;;;;x
 PROV3817;Monte;;;;;;;;;;;;;x
 PROV3818;Última Esperanza;;;;;;;;;;;;;x
 PROV3819;Última Esperanza;;;;;;;;;;;;;x
