fixed prov error

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3779,7 +3779,7 @@ PROV3777;Sachishima;;;;;;;;;;;;;x
 PROV3778;Izu Islands;;;;;;;;;;;;;x
 PROV3779;Otsu;;;;;;;;;;;;;x
 PROV3780;Matsuoka;;;;;;;;;;;;;x
-PROV3781;Mito;;;;;;;;;;;;;x
+PROV3781;Joso;;;;;;;;;;;;;x
 PROV3782;Kurobahe;;;;;;;;;;;;;x
 PROV3783;Otawara;;;;;;;;;;;;;x
 PROV3784;Nikko;;;;;;;;;;;;;x
