added sixth set of kanto provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1650,7 +1650,7 @@ PROV1648;Toyama;;;;;;;;;;;;;x
 PROV1649;Edo;;;;;;;;;;;;;x
 PROV1650;Chiba;;;;;;;;;;;;;x
 PROV1651;Yokohama;;;;;;;;;;;;;x
-PROV1652;Urawa;;;;;;;;;;;;;x
+PROV1652;Iwatsuki;;;;;;;;;;;;;x
 PROV1653;Mito;;;;;;;;;;;;;x
 PROV1654;Bonin;;;;;;;;;;;;;x
 PROV1655;Osaka;;;;;;;;;;;;;x
@@ -3814,7 +3814,7 @@ PROV3812;Tatebayashi;;;;;;;;;;;;;x
 PROV3813;Ashikaga;;;;;;;;;;;;;x
 PROV3814;Oshi;;;;;;;;;;;;;x
 PROV3815;Kawagoe;;;;;;;;;;;;;x
-PROV3816;Iwatsuki;;;;;;;;;;;;;x
+PROV3816;Kiryu;;;;;;;;;;;;;x
 PROV3817;Kanazawa-Ku;;;;;;;;;;;;;x
 PROV3818;Mutsuura;;;;;;;;;;;;;x
 PROV3819;Ogino Yamanaka;;;;;;;;;;;;;x
@@ -3823,14 +3823,14 @@ PROV3821;Yokosuka;;;;;;;;;;;;;x
 PROV3822;Okabe;;;;;;;;;;;;;x
 PROV3823;Isekaki;;;;;;;;;;;;;x
 PROV3824;Maebashi;;;;;;;;;;;;;x
-PROV3825;Canandoa;;;;;;;;;;;;;x
-PROV3826;Chimore;;;;;;;;;;;;;x
-PROV3827;Mizque;;;;;;;;;;;;;x
-PROV3828;Sacaca;;;;;;;;;;;;;x
-PROV3829;Maro;;;;;;;;;;;;;x
-PROV3830;Madidi;;;;;;;;;;;;;x
-PROV3831;Ch'aska Urqu;;;;;;;;;;;;;x
-PROV3832;Mojo;;;;;;;;;;;;;x
+PROV3825;Takasaki;;;;;;;;;;;;;x
+PROV3826;Yoshii;;;;;;;;;;;;;x
+PROV3827;Obata;;;;;;;;;;;;;x
+PROV3828;Nanokaichi;;;;;;;;;;;;;x
+PROV3829;Annaka;;;;;;;;;;;;;x
+PROV3830;Numata;;;;;;;;;;;;;x
+PROV3831;Shibukawa;;;;;;;;;;;;;x
+PROV3832;Omigawa;;;;;;;;;;;;;x
 PROV3833;Guarayos;;;;;;;;;;;;;x
 PROV3834;San Fernando de la Florida Blanca;;;;;;;;;;;;;x
 PROV3835;Santa Rosa del Cuareim;;;;;;;;;;;;;x
