--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -195,22 +195,86 @@ EVTOPTA500050;Poland is not yet lost!;;;;;;;;;;;;;x
 EVTDESC500051;Somehow, despite our overwhelming material advantage, Polish forces have managed to repel our forces. While the damned foreign powers were already sympathetic to these Polish malcontents, they are now demanding that we withdraw fully from Poland and Lithuania, and recognize their rights as a sovereign country. While our advisors initially scoffed at this "offer," mounting international pressure and threats of collective Great Power intervention have forced us to the negotiating table, where our ambassadors were pressured into signing a treaty recognizing Polish sovereignty.;;;;;;;;;;;;;x
 EVTNAME500051;$COUNTRY_ADJ$ Defeat in Poland;;;;;;;;;;;;;x
 EVTOPTA500051;How could this have happened?;;;;;;;;;;;;;x
+EVTDESC500052;Localization;;;;;;;;;;;;;x
+EVTNAME500052;Negotiations with the Agricultural Society;;;;;;;;;;;;;x
+EVTOPTA500052;Let no one say that we did not try.;;;;;;;;;;;;;x
+EVTOPTB500052;Negotiating with commoners? How ridiculous.;;;;;;;;;;;;;x
+EVTDESC500053;Localization;;;;;;;;;;;;;x
+EVTNAME500053;Negotiations—The Question of Religion;;;;;;;;;;;;;x
+EVTOPTA500053;We must guarantee the Catholic Church's rights in Poland.;;;;;;;;;;;;;x
+EVTOPTB500053;We are Orthodoxy's bastion, and we shall continue to be its foremost defender!;;;;;;;;;;;;;x
+EVTDESC500054;Localization;;;;;;;;;;;;;x
+EVTNAME500054;Negotiations—The Question of Language;;;;;;;;;;;;;x
+EVTOPTA500054;We shall permit the teaching of Polish.;;;;;;;;;;;;;x
+EVTOPTB500054;Polish may be taught, but it must be brought closer to the mother tongue.;;;;;;;;;;;;;x
+EVTOPTC500054;This is the Russian Empire—all must speak Russian!;;;;;;;;;;;;;x
+EVTDESC500055;Localization;;;;;;;;;;;;;x
+EVTNAME500055;Negotiations—The Question of Prisoners;;;;;;;;;;;;;x
+EVTOPTA500055;All Polish revolutionaries must be released.;;;;;;;;;;;;;x
+EVTOPTB500055;We shall permit the release of the more pliable prisoners.;;;;;;;;;;;;;x
+EVTOPTC500055;$COUNTRY$ shall not bow to the mob.;;;;;;;;;;;;;x
+EVTDESC500056;Localization;;;;;;;;;;;;;x
+EVTNAME500056;Negotiations—The Question of Serfdom;;;;;;;;;;;;;x
+EVTOPTA500056;Serfdom shall be abolished, with compensation.;;;;;;;;;;;;;x
+EVTOPTB500056;$COUNTRY$ makes no promises.;;;;;;;;;;;;;x
+EVTOPTC500056;No compensation shall be offered to troublemakers and rabble-rousers.;;;;;;;;;;;;;x
+EVTDESC500057;Localization;;;;;;;;;;;;;x
+EVTNAME500057;Negotiations—The Question of Autonomy;;;;;;;;;;;;;x
+EVTOPTA500057;We have no choice—introduce the 1791 Constitution and Kollatay's reforms.;;;;;;;;;;;;;x
+EVTOPTB500057;The 1815 Constitution shall be guaranteed in perpetuity.;;;;;;;;;;;;;x
+EVTOPTC500057;Our hand in the Congress Kingdom must be lightened.;;;;;;;;;;;;;x
+EVTOPTD500057;I see no issue with the status quo.;;;;;;;;;;;;;x
+EVTDESC500058;Localization;;;;;;;;;;;;;x
+EVTNAME500058;Negotiations—Deliberations;;;;;;;;;;;;;x
+EVTOPTA500058;We can but wait and see.;;;;;;;;;;;;;x
+EVTDESC500059;Localization;;;;;;;;;;;;;x
+EVTNAME500059;Negotiations—Total Success;;;;;;;;;;;;;x
+EVTOPTA500059;Our sacrifices have paid off.;;;;;;;;;;;;;x
+EVTDESC500060;Localization;;;;;;;;;;;;;x
+EVTNAME500060;Negotiations—Partial Success;;;;;;;;;;;;;x
+EVTOPTA500060;An acceptable outcome.;;;;;;;;;;;;;x
+EVTDESC500061;Localization;;;;;;;;;;;;;x
+EVTNAME500061;Negotiations—Limited Success;;;;;;;;;;;;;x
+EVTOPTA500061;At least we have something to show for our efforts.;;;;;;;;;;;;;x
+EVTDESC500062;Localization;;;;;;;;;;;;;x
+EVTNAME500062;Negotiations—Failure;;;;;;;;;;;;;x
+EVTOPTA500062;Insolent children, throwing a tantrum when they don't get their way!;;;;;;;;;;;;;x
+EVTDESC93;Localization;;;;;;;;;;;;;x
+EVTNAME93;Integration of Poznan;;;;;;;;;;;;;x
+EVTOPTA93;Localization;;;;;;;;;;;;;x
+EVTDESC94;Localization;;;;;;;;;;;;;x
+EVTNAME94;Integration of Silesia;;;;;;;;;;;;;x
+EVTOPTA94;Localization;;;;;;;;;;;;;x
+EVTDESC95;Localization;;;;;;;;;;;;;x
+EVTNAME95;Integration of East Prussia;;;;;;;;;;;;;x
+EVTOPTA95;Localization;;;;;;;;;;;;;x
+EVTOPTB95;Localization;;;;;;;;;;;;;x
+EVTDESC96;Localization;;;;;;;;;;;;;x
+EVTNAME96;Integration of West Prussia;;;;;;;;;;;;;x
+EVTOPTA96;Localization;;;;;;;;;;;;;x
+EVTDESC97;Localization;;;;;;;;;;;;;x
+EVTNAME97;Integration of West Galicia;;;;;;;;;;;;;x
+EVTOPTA97;Localization;;;;;;;;;;;;;x
+EVTDESC98;Localization;;;;;;;;;;;;;x
+EVTNAME98;Integration of East Galicia;;;;;;;;;;;;;x
+EVTOPTA98;Localization;;;;;;;;;;;;;x
+EVTOPTB98;Localization;;;;;;;;;;;;;x
 EVTDESC500099;For centuries, we and the Poles have fought over any number of issues : land, religion, or power. Which Russian could have forgotten the Time of Troubles, when the Polish-Lithuanian Commonwealth marched into Moskva and seized Smolensk from the $COUNTRY_ADJ$ people? Who does not recall the countless wars first fought over the Don, then the Dneiper, and then the Vistula? Who does not recall the days of November 1830, when the Pan-Slavist dream seemed to be lost forever?\n\n However, today, we have resurrected that dream—the dream of brotherly solidarity between all Slavs, from the Baltic to the Aegean. The Poles, once the most vocal opponents of Pan-Slavism, have now become its strongest supporters—it is rare to come across someone in the Congress Kingdom that does not carry the blue-white-red flag. The Polish Question has been resolved today, and no one in our two countries could be happier.\n §R NOTE: There will be no more Polish uprisings after this.§!;;;;;;;;;;;;;x
 EVTNAME500099;The Polish Question;;;;;;;;;;;;;x
 EVTOPTA500099;The Poles and Russians stand as brothers today!;;;;;;;;;;;;;x
-XEVTDESC5000160;After the Revolution in Berlin succeeded during the Spring of Nations, newly freed Polish prisoners joined the Berlin Home Guard by founding a Polish Legion, and were armed with weapons from the Prussian arsenal. A Pole waved the black, red, and gold flag of the German Revolution and the prisoners were celebrated by the public. Speeches were made about a joint fight against the Russians for a free and united Germany and an independent Poland. Many were under the impression that all of Prussia wanted a free Poland to serve as a shield against Russia and that the Polish question would soon be resolved. However, after a while, the atmosphere among the Germans and a portion of the Jewish population began to change dramatically at the first signs of violence by the Poles. In a matter of days revolutionary sentiment had risen throughout the entire Duchy of Posen. Polish nobility and peasantry took up arms, preparing for a confrontation with the Prussian Army, Prussian symbols were torn down, and in couple of places fighting erupted against German colonists. The revolt had begun.;;;;;;;;;;;;;x
-XEVTNAME5000160;The Greater Poland Uprising;;;;;;;;;;;;;x
-XEVTOPTA5000160;Death to the rebels!;;;;;;;;;;;;;x
-XEVTOPTB5000170;It isn't worth the fight.;;;;;;;;;;;;;x
-XEVTOPTC5000170;Onwards to Poznan!;;;;;;;;;;;;;x
-XEVTDESC5000190;After our Polish subjects raised the banner of rebellion, the old territories of the Grand Duchy quickly became restless, demanding their own concessions. Today, these have finally tipped over, and the result is clear - a full-scale rebellion, spanning from Palanga on the Baltic Sea, to Kyiv, the largest city in Ukraine. Even in Byelorussia and Latvia, the flames of rebellion grow ever higher, and our officers in the area demand an immediate response to these traitors.\n The goal of this great rebellion in our western territories is clear - the reversal of the Polish Partitions and the restoration of the Polish-Lithuanian Commonwealth to the European scene. The General-Gubernator of the Northwestern Krai (Vilna, Kovno, Grodno, Minsk, Mogilev, and Vitebsk) has requested immediate backup to crush these fools.;;;;;;;;;;;;;x
-XEVTNAME5000190;The Uprising Spreads to the Northwest;;;;;;;;;;;;;x
-XEVTOPTA5000190;The situation is deteriorating, and deteriorating fast.;;;;;;;;;;;;;x
-XEVTOPTB5000190;Onwards to Lithuania!;;;;;;;;;;;;;x
-XEVTDESC5000200;With both the core lands of the Kingdom of Poland and the Grand Duchy in full revolt, other malcontents have seen fit to join these traitors in their foolish rebellion to restore the old Commonwealth. Our garrisons in West Ukraine have been quickly overwhelmed, and the General-Gubernator of the Southwestern Krai (Kiev, Podolia and Volhynia) has requested immediate support to crush this rebellion.;;;;;;;;;;;;;x
-XEVTNAME5000200;The Uprising Spreads to the Southwest;;;;;;;;;;;;;x
-XEVTOPTA5000200;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
-XEVTOPTB5000200;This is unwinnable. We must let them go.;;;;;;;;;;;;;x
+#EVTDESC5000160;After the Revolution in Berlin succeeded during the Spring of Nations, newly freed Polish prisoners joined the Berlin Home Guard by founding a Polish Legion, and were armed with weapons from the Prussian arsenal. A Pole waved the black, red, and gold flag of the German Revolution and the prisoners were celebrated by the public. Speeches were made about a joint fight against the Russians for a free and united Germany and an independent Poland. Many were under the impression that all of Prussia wanted a free Poland to serve as a shield against Russia and that the Polish question would soon be resolved. However, after a while, the atmosphere among the Germans and a portion of the Jewish population began to change dramatically at the first signs of violence by the Poles. In a matter of days revolutionary sentiment had risen throughout the entire Duchy of Posen. Polish nobility and peasantry took up arms, preparing for a confrontation with the Prussian Army, Prussian symbols were torn down, and in couple of places fighting erupted against German colonists. The revolt had begun.;;;;;;;;;;;;;x
+#EVTNAME5000160;The Greater Poland Uprising;;;;;;;;;;;;;x
+#EVTOPTA5000160;Death to the rebels!;;;;;;;;;;;;;x
+#EVTOPTB5000170;It isn't worth the fight.;;;;;;;;;;;;;x
+#EVTOPTC5000170;Onwards to Poznan!;;;;;;;;;;;;;x
+#EVTDESC5000190;After our Polish subjects raised the banner of rebellion, the old territories of the Grand Duchy quickly became restless, demanding their own concessions. Today, these have finally tipped over, and the result is clear - a full-scale rebellion, spanning from Palanga on the Baltic Sea, to Kyiv, the largest city in Ukraine. Even in Byelorussia and Latvia, the flames of rebellion grow ever higher, and our officers in the area demand an immediate response to these traitors.\n The goal of this great rebellion in our western territories is clear - the reversal of the Polish Partitions and the restoration of the Polish-Lithuanian Commonwealth to the European scene. The General-Gubernator of the Northwestern Krai (Vilna, Kovno, Grodno, Minsk, Mogilev, and Vitebsk) has requested immediate backup to crush these fools.;;;;;;;;;;;;;x
+#EVTNAME5000190;The Uprising Spreads to the Northwest;;;;;;;;;;;;;x
+#EVTOPTA5000190;The situation is deteriorating, and deteriorating fast.;;;;;;;;;;;;;x
+#EVTOPTB5000190;Onwards to Lithuania!;;;;;;;;;;;;;x
+#EVTDESC5000200;With both the core lands of the Kingdom of Poland and the Grand Duchy in full revolt, other malcontents have seen fit to join these traitors in their foolish rebellion to restore the old Commonwealth. Our garrisons in West Ukraine have been quickly overwhelmed, and the General-Gubernator of the Southwestern Krai (Kiev, Podolia and Volhynia) has requested immediate support to crush this rebellion.;;;;;;;;;;;;;x
+#EVTNAME5000200;The Uprising Spreads to the Southwest;;;;;;;;;;;;;x
+#EVTOPTA5000200;Death to the rebels! Long live the Tsar!;;;;;;;;;;;;;x
+#EVTOPTB5000200;This is unwinnable. We must let them go.;;;;;;;;;;;;;x
 EVTDESC500600;Foreign Aid;;;;;;;;;;;;;x
 EVTNAME500600;We can request aid from friendly Great Powers.;;;;;;;;;;;;;x
 EVTOPTA500600;Let us nationalize foreign assets.;;;;Déjanos nacionalizar activos extranjeros.;;;;;;;;;x
