--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -74,6 +74,9 @@ renaming_half_y;Renamings will happen every §G6 months§!.§b;;;;;;;;;;;;x
 renaming_1_y;Renamings will happen §Gonce a year§!.§b;;;;;;;;;;;;x
 renaming_2_y;Renamings will happen every §G2 years§!.§b;;;;;;;;;;;;x
 renaming_5_y;Renamings will happen every §G5 years§!.§b;;;;;;;;;;;;x
-event_505001_custom_tooltip;§RAn Alyaskan culture will begin to emerge in our North American holdings...§!;;;;;;;;;;;;x
-not_done;§GYou have not done this!§!;;;;;;;;;;;;x
-already_done;§RYou have already done this!§!;;;;;;;;;;;;x
+event_505001_custom_tooltip;§RAn Alyaskan culture will begin to emerge in our North American holdings...§b;;;;;;;;;;;;x
+not_done;§GYou have not done this!§b;;;;;;;;;;;;x
+already_done;§RYou have already done this!§b;;;;;;;;;;;;x
+already_done;§RYou have already done this!§b;;;;;;;;;;;;x
+open_uprising_readiness_tooltip_RUS;§!This will open the menu for decreasing Polish readiness for the January Uprising.§b;;;;;;;;;;;;;x
+open_uprising_readiness_tooltip_CPL;§!This will open the menu for increasing our readiness for the January Uprising.§b;;;;;;;;;;;;;x
