bunch of changes to Russia Rework event menus

--- a/TGC/localisation/00_governments.csv
+++ b/TGC/localisation/00_governments.csv
@@ -3,8 +3,8 @@ absolute_monarchy;Absolute Monarchy;;;;;;;;;;;;;x
 absolute_monarchy_ruler;Your Majesty;;;;;;;;;;;;;x
 absolute_monarchy2;Absolute Monarchy;;;;;;;;;;;;;x
 absolute_monarchy2_ruler;Your Majesty;;;;;;;;;;;;;x
-bourgeois_dictatorship;Bourgeois Dictatorship;Dictature bourgeoise;Bürgerliche Diktatur;;;;;;;;;;;x
-bourgeois_dictatorship_ruler;Mr. Chairman;;;;;;;;;;;;;x
+bourgeois_dictatorship;Revolutionary Republic;Dictature bourgeoise;Bürgerliche Diktatur;;;;;;;;;;;x
+bourgeois_dictatorship_ruler;Mr. President;;;;;;;;;;;;;x
 colonial_company;Autonomous Dependancy;;;;;;;;;;;;;x
 colonial_company_ruler;Governor;;;;;;;;;;;;;x
 democracy;Republic;;;;;;;;;;;;;x
@@ -23,8 +23,8 @@ hms_government2;Parliamentary Monarchy;;;;;;;;;;;;;x
 hms_government2_ruler;Prime Minister;;;;;;;;;;;;;x
 presidential_dictatorship;Autocratic Dictatorship;;;;;;;;;;;;;x
 presidential_dictatorship_ruler;Mr. President;;;;;;;;;;;;;x
-proletarian_dictatorship;Communist Dictatorship;;;;;;;;;;;;;x
-proletarian_dictatorship_ruler;Mr. Chairman;;;;;;;;;;;;;x
+proletarian_dictatorship;Socialist Republic;;;;;;;;;;;;;x
+proletarian_dictatorship_ruler;Comrade Chairman;;;;;;;;;;;;;x
 prussian_constitutionalism;Constitutional Monarchy;;;;;;;;;;;;;x
 prussian_constitutionalism_ruler;Your Majesty;;;;;;;;;;;;;x
 prussian_constitutionalism2;Constitutional Monarchy;;;;;;;;;;;;;x
@@ -32,4 +32,4 @@ prussian_constitutionalism2_ruler;Your Majesty;;;;;;;;;;;;;x
 theocracy;Theocracy;;;;;;;;;;;;;x
 theocracy_ruler;Your Holiness;;;;;;;;;;;;;x
 trade_unions_congress;Congress of Trade Unions;;;;;;;;;;;;;x
-trade_unions_congress_ruler;Mr. President;;;;;;;;;;;;;x
+trade_unions_congress_ruler;Comrade Chairman;;;;;;;;;;;;;x
