--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -78,5 +78,5 @@ event_505001_custom_tooltip;§RAn Alyaskan culture will begin to emerge in our No
 not_done;§GYou have not done this!§b;;;;;;;;;;;;x
 already_done;§RYou have already done this!§b;;;;;;;;;;;;x
 already_done;§RYou have already done this!§b;;;;;;;;;;;;x
-open_uprising_readiness_tooltip_RUS;§!This will open the menu for decreasing Polish readiness for the January Uprising.§b;;;;;;;;;;;;;x
-open_uprising_readiness_tooltip_CPL;§!This will open the menu for increasing our readiness for the January Uprising.§b;;;;;;;;;;;;;x
+open_uprising_readiness_tooltip_RUS;§GThis will open the menu for decreasing Polish readiness for the January Uprising.§b;;;;;;;;;;;;;x
+open_uprising_readiness_tooltip_CPL;§GThis will open the menu for increasing our readiness for the January Uprising.§b;;;;;;;;;;;;;x
