added more flavor for pre-uprising

--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -80,3 +80,4 @@ already_done;§RYou have already done this!§b;;;;;;;;;;;;x
 already_done;§RYou have already done this!§b;;;;;;;;;;;;x
 open_uprising_readiness_tooltip_RUS;§GThis will open the menu for decreasing Polish readiness for the January Uprising.§b;;;;;;;;;;;;;x
 open_uprising_readiness_tooltip_CPL;§GThis will open the menu for increasing our readiness for the January Uprising.§b;;;;;;;;;;;;;x
+pobudka_options_enabled;§GThis will let us start to disseminate favorable articles and revolutionary propaganda to the Polish people...§b;;;;;;;;;;;;;x
