added to the monarchy options

--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -262,6 +262,27 @@ EVTOPTB98;Localization;;;;;;;;;;;;;x
 EVTDESC500099;For centuries, we and the Poles have fought over any number of issues : land, religion, or power. Which Russian could have forgotten the Time of Troubles, when the Polish-Lithuanian Commonwealth marched into Moskva and seized Smolensk from the $COUNTRY_ADJ$ people? Who does not recall the countless wars first fought over the Don, then the Dneiper, and then the Vistula? Who does not recall the days of November 1830, when the Pan-Slavist dream seemed to be lost forever?\n\n However, today, we have resurrected that dream—the dream of brotherly solidarity between all Slavs, from the Baltic to the Aegean. The Poles, once the most vocal opponents of Pan-Slavism, have now become its strongest supporters—it is rare to come across someone in the Congress Kingdom that does not carry the blue-white-red flag. The Polish Question has been resolved today, and no one in our two countries could be happier.\n §R NOTE: There will be no more Polish uprisings after this.§!;;;;;;;;;;;;;x
 EVTNAME500099;The Polish Question;;;;;;;;;;;;;x
 EVTOPTA500099;The Poles and Russians stand as brothers today!;;;;;;;;;;;;;x
+EVTDESC500100;Localization;;;;;;;;;;;;;x
+EVTNAME500100;Choosing a King - Part 1;;;;;;;;;;;;;x
+EVTOPTA500100;Poniatowski;;;;;;;;;;;;;x
+EVTOPTB500100;Hohenzollern;;;;;;;;;;;;;x
+EVTOPTC500100;Hapsburg;;;;;;;;;;;;;x
+EVTOPTD500100;Bonaparte;;;;;;;;;;;;;x
+EVTOPTE500100;None of these candidates are suitable.;;;;;;;;;;;;;x
+EVTDESC500101;Localization;;;;;;;;;;;;;x
+EVTNAME500101;Choosing a King - Part 2;;;;;;;;;;;;;x
+EVTOPTA500101;Wettin;;;;;;;;;;;;;x
+EVTOPTB500101;Czartoryski;;;;;;;;;;;;;x
+EVTOPTC500101;Potocki;;;;;;;;;;;;;x
+EVTOPTD500101;Radziwill;;;;;;;;;;;;;x
+EVTOPTE500101;None of these candidates are suitable either.;;;;;;;;;;;;;x
+EVTDESC500102;Localization;;;;;;;;;;;;;x
+EVTNAME500102;Choosing a King - Part 3;;;;;;;;;;;;;x
+EVTOPTA500102;Vasa-Jagellonian;;;;;;;;;;;;;x
+EVTOPTB500102;Mohyla;;;;;;;;;;;;;x
+EVTOPTC500102;Swiatopelk-Mirski;;;;;;;;;;;;;x
+EVTOPTD500102;Biron;;;;;;;;;;;;;x
+EVTOPTE500102;None of these candidates are suitable as well.;;;;;;;;;;;;;x
 #EVTDESC5000160;After the Revolution in Berlin succeeded during the Spring of Nations, newly freed Polish prisoners joined the Berlin Home Guard by founding a Polish Legion, and were armed with weapons from the Prussian arsenal. A Pole waved the black, red, and gold flag of the German Revolution and the prisoners were celebrated by the public. Speeches were made about a joint fight against the Russians for a free and united Germany and an independent Poland. Many were under the impression that all of Prussia wanted a free Poland to serve as a shield against Russia and that the Polish question would soon be resolved. However, after a while, the atmosphere among the Germans and a portion of the Jewish population began to change dramatically at the first signs of violence by the Poles. In a matter of days revolutionary sentiment had risen throughout the entire Duchy of Posen. Polish nobility and peasantry took up arms, preparing for a confrontation with the Prussian Army, Prussian symbols were torn down, and in couple of places fighting erupted against German colonists. The revolt had begun.;;;;;;;;;;;;;x
 #EVTNAME5000160;The Greater Poland Uprising;;;;;;;;;;;;;x
 #EVTOPTA5000160;Death to the rebels!;;;;;;;;;;;;;x
