--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -81,3 +81,6 @@ already_done;§RYou have already done this!§b;;;;;;;;;;;;x
 open_uprising_readiness_tooltip_RUS;§GThis will open the menu for decreasing Polish readiness for the January Uprising.§b;;;;;;;;;;;;;x
 open_uprising_readiness_tooltip_CPL;§GThis will open the menu for increasing our readiness for the January Uprising.§b;;;;;;;;;;;;;x
 pobudka_options_enabled;§GThis will let us start to disseminate favorable articles and revolutionary propaganda to the Polish people...§b;;;;;;;;;;;;;x
+part_2_polish_kings;The Provisional National Government shall consider alternate options for our future monarch...§b;;;;;;;;;;;;;x
+exit_polish_kings;The Provisional National Government is unable to come to a decision on our future monarch as of now.§b;;;;;;;;;;;;;x
+part_3_polish_kings;The Provisional National Government shall consider more alternate options for our future monarch, some of them rather questionable...§b;;;;;;;;;;;;;x
