fixes for cossack settlement decisions

--- a/TGC/localisation/00_tooltips.csv
+++ b/TGC/localisation/00_tooltips.csv
@@ -77,7 +77,7 @@ renaming_5_y;Renamings will happen every §G5 years§!.§b;;;;;;;;;;;;x
 event_505001_custom_tooltip;§RAn Alyaskan culture will begin to emerge in our North American holdings...§b;;;;;;;;;;;;x
 not_done;§GYou have not done this!§b;;;;;;;;;;;;x
 already_done;§RYou have already done this!§b;;;;;;;;;;;;x
-already_done;§RYou have already done this!§b;;;;;;;;;;;;x
+cannot_do;§RYou cannot do this yet—you don't own the province needed!§b;;;;;;;;;;;;x
 open_uprising_readiness_tooltip_RUS;§GThis will open the menu for decreasing Polish readiness for the January Uprising.§b;;;;;;;;;;;;;x
 open_uprising_readiness_tooltip_CPL;§GThis will open the menu for increasing our readiness for the January Uprising.§b;;;;;;;;;;;;;x
 pobudka_options_enabled;§GThis will let us start to disseminate favorable articles and revolutionary propaganda to the Polish people...§b;;;;;;;;;;;;;x
