--- a/TGC/localisation/00_events_0500000.csv
+++ b/TGC/localisation/00_events_0500000.csv
@@ -239,6 +239,48 @@ EVTOPTA500061;At least we have something to show for our efforts.;;;;;;;;;;;;;x
 EVTDESC500062;Localization;;;;;;;;;;;;;x
 EVTNAME500062;Negotiations—Failure;;;;;;;;;;;;;x
 EVTOPTA500062;Insolent children, throwing a tantrum when they don't get their way!;;;;;;;;;;;;;x
+EVTDESC500063;Localization;;;;;;;;;;;;;x
+EVTNAME500063;Preparing for the January Uprising - Part 1;;;;;;;;;;;;;x
+EVTOPTA500063;Expand Secret Societies;;;;;;;;;;;;;x
+EVTOPTB500063;Spread Nationalist Propaganda;;;;;;;;;;;;;x
+EVTOPTC500063;Train Underground Militias;;;;;;;;;;;;;x
+EVTOPTD500063;Contact Foreign Exiles;;;;;;;;;;;;;x
+EVTOPTE500063;Next;;;;;;;;;;;;;x
+EVTDESC500064;Localization;;;;;;;;;;;;;x
+EVTNAME500064;Preparing for the January Uprising - Part 2;;;;;;;;;;;;;x
+EVTOPTA500064;Smuggle in Foreign Weapons;;;;;;;;;;;;;x
+EVTOPTB500064;Develop Underground Workshops;;;;;;;;;;;;;x
+EVTOPTC500064;Advocate Land Reform;;;;;;;;;;;;;x
+EVTOPTD500064;Rally Patriotic Youth;;;;;;;;;;;;;x
+EVTOPTE500064;Next;;;;;;;;;;;;;x
+EVTDESC500065;Localization;;;;;;;;;;;;;x
+EVTNAME500065;Preparing for the January Uprising - Part 3;;;;;;;;;;;;;x
+EVTOPTA500065;Sway Foreign Powers;;;;;;;;;;;;;x
+EVTOPTB500065;Issue Bonds;;;;;;;;;;;;;x
+EVTOPTC500065;Build Up the Shadow Administration;;;;;;;;;;;;;x
+EVTOPTD500065;Sway Congressional Officials;;;;;;;;;;;;;x
+EVTOPTE500065;Exit;;;;;;;;;;;;;x
+EVTDESC500066;Localization;;;;;;;;;;;;;x
+EVTNAME500066;Securing the Congress Kingdom - Part 1;;;;;;;;;;;;;x
+EVTOPTA500066;Suppress Secret Societies;;;;;;;;;;;;;x
+EVTOPTB500066;Expand Censorship Offices;;;;;;;;;;;;;x
+EVTOPTC500066;Increase Police Patrols;;;;;;;;;;;;;x
+EVTOPTD500066;Expel Suspected Seditionists and Provocateurs;;;;;;;;;;;;;x
+EVTOPTE500066;Next;;;;;;;;;;;;;x
+EVTDESC500067;Localization;;;;;;;;;;;;;x
+EVTNAME500067;Securing the Congress Kingdom - Part 2;;;;;;;;;;;;;x
+EVTOPTA500067;Raise Border Guard Corps;;;;;;;;;;;;;x
+EVTOPTB500067;Raid Underground Workshops;;;;;;;;;;;;;x
+EVTOPTC500067;Loosen Martial Law;;;;;;;;;;;;;x
+EVTOPTD500067;Crack Down on Nationalist Gatherings;;;;;;;;;;;;;x
+EVTOPTE500067;Next;;;;;;;;;;;;;x
+EVTDESC500068;Localization;;;;;;;;;;;;;x
+EVTNAME500068;Securing the Congress Kingdom - Part 3;;;;;;;;;;;;;x
+EVTOPTA500068;Pressure Foreign Powers;;;;;;;;;;;;;x
+EVTOPTB500068;Seize Polish Bonds;;;;;;;;;;;;;x
+EVTOPTC500068;Strengthen the Congressional Government;;;;;;;;;;;;;x
+EVTOPTD500068;Investigate Congressional Officials;;;;;;;;;;;;;x
+EVTOPTE500068;Exit;;;;;;;;;;;;;x
 EVTDESC93;Localization;;;;;;;;;;;;;x
 EVTNAME93;Integration of Poznan;;;;;;;;;;;;;x
 EVTOPTA93;Localization;;;;;;;;;;;;;x
