added final 2 kanto provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3831,8 +3831,8 @@ PROV3829;Annaka;;;;;;;;;;;;;x
 PROV3830;Numata;;;;;;;;;;;;;x
 PROV3831;Shibukawa;;;;;;;;;;;;;x
 PROV3832;Omigawa;;;;;;;;;;;;;x
-PROV3833;Guarayos;;;;;;;;;;;;;x
-PROV3834;San Fernando de la Florida Blanca;;;;;;;;;;;;;x
+PROV3833;Omiya;;;;;;;;;;;;;x
+PROV3834;Kawasaki;;;;;;;;;;;;;x
 PROV3835;Santa Rosa del Cuareim;;;;;;;;;;;;;x
 PROV3836;Colonia del Sacramento;;;;;;;;;;;;;x
 PROV3837;Invernada;;;;;;;;;;;;;x
