added first set of tohoku provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3833,13 +3833,13 @@ PROV3831;Shibukawa;;;;;;;;;;;;;x
 PROV3832;Omigawa;;;;;;;;;;;;;x
 PROV3833;Omiya;;;;;;;;;;;;;x
 PROV3834;Kawasaki;;;;;;;;;;;;;x
-PROV3835;Santa Rosa del Cuareim;;;;;;;;;;;;;x
-PROV3836;Colonia del Sacramento;;;;;;;;;;;;;x
-PROV3837;Invernada;;;;;;;;;;;;;x
-PROV3838;Villa San Pedro del Durazno;;;;;;;;;;;;;x
-PROV3839;Caraguatá;;;;;;;;;;;;;x
-PROV3840;Esquina;;;;;;;;;;;;;x
-PROV3841;Melincué;;;;;;;;;;;;;x
+PROV3835;Hirosaki;;;;;;;;;;;;;x
+PROV3836;Kuroishi;;;;;;;;;;;;;x
+PROV3837;Hiranai;;;;;;;;;;;;;x
+PROV3838;Tanabu;;;;;;;;;;;;;x
+PROV3839;Shichinohe;;;;;;;;;;;;;x
+PROV3840;Hachinohe;;;;;;;;;;;;;x
+PROV3841;Miyako;;;;;;;;;;;;;x
 PROV3842;Laguna de Milagro;;;;;;;;;;;;;x
 PROV3843;Nahuel-Có;;;;;;;;;;;;;x
 PROV3844;Mamul Lauquen;;;;;;;;;;;;;x
