--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3840,16 +3840,16 @@ PROV3838;Tanabu;;;;;;;;;;;;;x
 PROV3839;Shichinohe;;;;;;;;;;;;;x
 PROV3840;Hachinohe;;;;;;;;;;;;;x
 PROV3841;Miyako;;;;;;;;;;;;;x
-PROV3842;Laguna de Milagro;;;;;;;;;;;;;x
-PROV3843;Nahuel-Có;;;;;;;;;;;;;x
-PROV3844;Mamul Lauquen;;;;;;;;;;;;;x
-PROV3845;Las Tunas;;;;;;;;;;;;;x
-PROV3846;Choquin;;;;;;;;;;;;;x
-PROV3847;Quetré Huitrú Lauquen;;;;;;;;;;;;;x
-PROV3848;Vuta-Ló;;;;;;;;;;;;;x
-PROV3849;Yalguaraz;;;;;;;;;;;;;x
-PROV3850;Münüwül;;;;;;;;;;;;;x
-PROV3851;Peñitas;;;;;;;;;;;;;x
+PROV3842;Yokote;;;;;;;;;;;;;x
+PROV3843;Kameda;;;;;;;;;;;;;x
+PROV3844;Honjo;;;;;;;;;;;;;x
+PROV3845;Shonai;;;;;;;;;;;;;x
+PROV3846;Sakata;;;;;;;;;;;;;x
+PROV3847;Tsuruoka;;;;;;;;;;;;;x
+PROV3848;Shinjo;;;;;;;;;;;;;x
+PROV3849;Sagae;;;;;;;;;;;;;x
+PROV3850;Tendo;;;;;;;;;;;;;x
+PROV3851;Kaminoyama;;;;;;;;;;;;;x
 PROV3852;Copo Oeste;;;;;;;;;;;;;x
 PROV3853;Puel Curru Lauquen;;;;;;;;;;;;;x
 PROV3854;Caluellahuhai;;;;;;;;;;;;;x
