added hokkaido provs

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -1641,8 +1641,8 @@ PROV1639;Okayama;;;;;;;;;;;;;x
 PROV1640;Yamaguchi;;;;;;;;;;;;;x
 PROV1641;Matsue;;;;;;;;;;;;;x
 PROV1642;Hakodate;;;;;;;;;;;;;x
-PROV1643;Ishikari;;;;;;;;;;;;;x
-PROV1644;Meakan;;;;;;;;;;;;;x
+PROV1643;Sapporo;;;;;;;;;;;;;x
+PROV1644;Nemuro;;;;;;;;;;;;;x
 PROV1645;Niigata;;;;;;;;;;;;;x
 PROV1646;Kanazawa;;;;;;;;;;;;;x
 PROV1647;Fukui;;;;;;;;;;;;;x
@@ -3867,12 +3867,12 @@ PROV3865;Sukagawa;;;;;;;;;;;;;x
 PROV3866;Shirakawa;;;;;;;;;;;;;x
 PROV3867;Tanagura;;;;;;;;;;;;;x
 PROV3868;Aizuwakamatsu;;;;;;;;;;;;;x
-PROV3869;Tafingastaque;;;;;;;;;;;;;x
-PROV3870;Sumampa;;;;;;;;;;;;;x
-PROV3871;Huinca Rungang-có;;;;;;;;;;;;;x
-PROV3872;Honaltaj;;;;;;;;;;;;;x
-PROV3873;Chana;;;;;;;;;;;;;x
-PROV3874;Aillancó;;;;;;;;;;;;;x
+PROV3869;Matsumae;;;;;;;;;;;;;x
+PROV3870;Otaru;;;;;;;;;;;;;x
+PROV3871;Muroran;;;;;;;;;;;;;x
+PROV3872;Abashiri;;;;;;;;;;;;;x
+PROV3873;Obihiro;;;;;;;;;;;;;x
+PROV3874;Asahikawa;;;;;;;;;;;;;x
 PROV3875;Pirhuas;;;;;;;;;;;;;x
 PROV3876;Letsenqat;;;;;;;;;;;;;x
 PROV3877;San Pedro;;;;;;;;;;;;;x
