--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -495,6 +495,7 @@ MSN;Misiones;;;;;;;;;;;;;x
 MSS;Samos;;;;;;;;;;;;;x
 MST;Mecklenburg-Strelitz;;;;;;;;;;;;;x
 MTC;Métis Confederacy;Confï¿½dï¿½ration mï¿½tisse;Metis-Konföderation;;;;;;;;;;;x
+MTM;Matsumae;;;;;;;;;;;;;x
 MTQ;Martinique;;;;;;;;;;;;;x
 MUD;Mudhol;;;;;;;;;;;;;x
 MUG;Mughalistan;Mogholistan;Mughalistan;;;;;;;;;;;x
