added obi and nobeoka

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -519,6 +519,11 @@ ITP_proletarian_dictatorship_ADJ;Roman;;;;;;;;;;;;;x
 ITS_ADJ;Italian;;;;;;;;;;;;;x
 IVC_ADJ;Ivorian;;;;;;;;;;;;;x
 IZH_ADJ;Ingrian;;;;;;;;;;;;;x
+J00_ADJ;Tanegashiman;;;;;;;;;;;;;x
+J01_ADJ;Miyakonojoan;;;;;;;;;;;;;x
+J02_ADJ;Takanabean;;;;;;;;;;;;;x
+J03_ADJ;Obian;;;;;;;;;;;;;x
+J04_ADJ;Nobeokan;;;;;;;;;;;;;x
 JAI_ADJ;Jaipuri;Jaipurien;Jaipurisch;;;;;;;;;;;x
 JAL_ADJ;Jallon;Djalon;Jalon;;;;;;;;;;;x
 JAM_ADJ;Jamaican;Jamaïcain;Jamaican;;;;;;;;;;;x
