added history + loc for all remaining kyushu tags

--- a/TGC/localisation/00_countries-demonyms.csv
+++ b/TGC/localisation/00_countries-demonyms.csv
@@ -524,6 +524,32 @@ J01_ADJ;Miyakonojoan;;;;;;;;;;;;;x
 J02_ADJ;Takanabean;;;;;;;;;;;;;x
 J03_ADJ;Obian;;;;;;;;;;;;;x
 J04_ADJ;Nobeokan;;;;;;;;;;;;;x
+J05_ADJ;Sadowaran;;;;;;;;;;;;;x
+J06_ADJ;Hitoyoshian;;;;;;;;;;;;;x
+J07_ADJ;Kumamotoan;;;;;;;;;;;;;x
+J08_ADJ;Utoan;;;;;;;;;;;;;x
+J09_ADJ;Tsushima-Fuchuan;;;;;;;;;;;;;x
+J10_ADJ;Hiradoan;;;;;;;;;;;;;x
+J11_ADJ;Fukuean;;;;;;;;;;;;;x
+J12_ADJ;Omuran;;;;;;;;;;;;;x
+J13_ADJ;Shimabaran;;;;;;;;;;;;;x
+J14_ADJ;Sagan;;;;;;;;;;;;;x
+J15_ADJ;Kashiman;;;;;;;;;;;;;x
+J16_ADJ;Ogian;;;;;;;;;;;;;x
+J17_ADJ;Karatsuan;;;;;;;;;;;;;x
+J18_ADJ;Yanagawan;;;;;;;;;;;;;x
+J19_ADJ;Kurumean;;;;;;;;;;;;;x
+J20_ADJ;Fukuokan;;;;;;;;;;;;;x
+J21_ADJ;Akizukian;;;;;;;;;;;;;x
+J22_ADJ;Kokuran;;;;;;;;;;;;;x
+J23_ADJ;Nakatsuan;;;;;;;;;;;;;x
+J24_ADJ;Morian;;;;;;;;;;;;;x
+J25_ADJ;Kitsukian;;;;;;;;;;;;;x
+J26_ADJ;Hijian;;;;;;;;;;;;;x
+J27_ADJ;Funaian;;;;;;;;;;;;;x
+J28_ADJ;Usukian;;;;;;;;;;;;;x
+J29_ADJ;Saekian;;;;;;;;;;;;;x
+J30_ADJ;Okan;;;;;;;;;;;;;x
 JAI_ADJ;Jaipuri;Jaipurien;Jaipurisch;;;;;;;;;;;x
 JAL_ADJ;Jallon;Djalon;Jalon;;;;;;;;;;;x
 JAM_ADJ;Jamaican;Jamaïcain;Jamaican;;;;;;;;;;;x
