--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -205,7 +205,7 @@ D07;Free State of $REGION$;;Der Freistaat von $REGION$;;;;;;;;;;;x
 D08;Grand State of $REGION$;;Der Großstaat von $REGION$;;;;;;;;;;;x
 D09;State of $REGION$;;Der Staat von $REGION$;;;;;;;;;;;x
 D10;Principality of $REGION$;;Das Fürstentum von $REGION$;;;;;;;;;;;x
-DAG;Dagestan;;;;;;;;;;;;;x		
+DAG;Dagestan;;;;;;;;;;;;;x
 DA0;Avaristan;;;;;;;;;;;;;x
 DA1;Kaytag;;;;;;;;;;;;;x
 DA2;Ghazikumukh;;;;;;;;;;;;;x
@@ -345,6 +345,32 @@ J01;Miyakonojo;;;;;;;;;;;;;x
 J02;Takanabe;;;;;;;;;;;;;x
 J03;Obi;;;;;;;;;;;;;x
 J04;Nobeoka;;;;;;;;;;;;;x
+J05;Sadowara;;;;;;;;;;;;;x
+J06;Hitoyoshi;;;;;;;;;;;;;x
+J07;Kumamoto;;;;;;;;;;;;;x
+J08;Uto;;;;;;;;;;;;;x
+J09;Tsushima-Fuchu;;;;;;;;;;;;;x
+J10;Hirado;;;;;;;;;;;;;x
+J11;Fukue;;;;;;;;;;;;;x
+J12;Omura;;;;;;;;;;;;;x
+J13;Shimabara;;;;;;;;;;;;;x
+J14;Saga;;;;;;;;;;;;;x
+J15;Kashima;;;;;;;;;;;;;x
+J16;Ogi;;;;;;;;;;;;;x
+J17;Karatsu;;;;;;;;;;;;;x
+J18;Yanagawa;;;;;;;;;;;;;x
+J19;Kurume;;;;;;;;;;;;;x
+J20;Fukuoka;;;;;;;;;;;;;x
+J21;Akizuki;;;;;;;;;;;;;x
+J22;Kokura;;;;;;;;;;;;;x
+J23;Nakatsu;;;;;;;;;;;;;x
+J24;Mori;;;;;;;;;;;;;x
+J25;Kitsuki;;;;;;;;;;;;;x
+J26;Hiji;;;;;;;;;;;;;x
+J27;Funai;;;;;;;;;;;;;x
+J28;Usuki;;;;;;;;;;;;;x
+J29;Saeki;;;;;;;;;;;;;x
+J30;Oka;;;;;;;;;;;;;x
 JAI;Jaipur;Jaipur;Jaipur;;;;;;;;;;;x
 JAL;Futa Jallon;;;;;;;;;;;;;x
 JAM;Jamaica;Jamaï¿½que;Jamaica;;;;;;;;;;;x
