province fixes and loc for sanyodo tags

--- a/TGC/localisation/00_map-provinces.csv
+++ b/TGC/localisation/00_map-provinces.csv
@@ -3647,7 +3647,7 @@ PROV3645;Niwase;;;;;;;;;;;;;x
 PROV3646;Kasaoka;;;;;;;;;;;;;x
 PROV3647;Kamogata;;;;;;;;;;;;;x
 PROV3648;Kurashiki;;;;;;;;;;;;;x
-PROV3649;Okayama;;;;;;;;;;;;;x
+PROV3649;Tsuyama;;;;;;;;;;;;;x
 PROV3650;Katsuyama;;;;;;;;;;;;;x
 PROV3651;Wakayama;;;;;;;;;;;;;x
 PROV3652;Kumano;;;;;;;;;;;;;x
