chubu history done

--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -453,6 +453,57 @@ JA9;Izushi;;;;;;;;;;;;;x
 JB0;Toyooka;;;;;;;;;;;;;x
 JB1;Muraoka;;;;;;;;;;;;;x
 JB2;Miyazu;;;;;;;;;;;;;x
+JB3;Murakami;;;;;;;;;;;;;x
+JB4;Kurokawa;;;;;;;;;;;;;x
+JB5;Shibata;;;;;;;;;;;;;x
+JB6;Muramatsu;;;;;;;;;;;;;x
+JB7;Mineoka;;;;;;;;;;;;;x
+JB8;Echigo-Nagaoka;;;;;;;;;;;;;x
+JB9;Yoita;;;;;;;;;;;;;x
+JC0;Shiiya;;;;;;;;;;;;;x
+JC1;Takada;;;;;;;;;;;;;x
+JC2;Itoigawa;;;;;;;;;;;;;x
+JC3;Toyama;;;;;;;;;;;;;x
+JC4;Daishoji;;;;;;;;;;;;;x
+JC5;Maruoka;;;;;;;;;;;;;x
+JC6;Fukui;;;;;;;;;;;;;x
+JC7;Sabae;;;;;;;;;;;;;x
+JC8;Ôno;;;;;;;;;;;;;x
+JC9;Echizen-Katsuyama;;;;;;;;;;;;;x
+JD0;Tsuruga;;;;;;;;;;;;;x
+JD1;Obama;;;;;;;;;;;;;x
+JD2;Gujô;;;;;;;;;;;;;x
+JD3;Owari;;;;;;;;;;;;;x
+JD4;Ôgaki;;;;;;;;;;;;;x
+JD5;Kanô;;;;;;;;;;;;;x
+JD6;Takasu;;;;;;;;;;;;;x
+JD7;Naegi;;;;;;;;;;;;;x
+JD8;Iwamura;;;;;;;;;;;;;x
+JD9;Iiyama;;;;;;;;;;;;;x
+JE0;Suzaka;;;;;;;;;;;;;x
+JE1;Matsushiro;;;;;;;;;;;;;x
+JE2;Ueda;;;;;;;;;;;;;x
+JE3;Matsumoto;;;;;;;;;;;;;x
+JE4;Komoro;;;;;;;;;;;;;x
+JE5;Iwamurada;;;;;;;;;;;;;x
+JE6;Okutono;;;;;;;;;;;;;x
+JE7;Suwa;;;;;;;;;;;;;x
+JE8;Takatoh;;;;;;;;;;;;;x
+JE9;Iida;;;;;;;;;;;;;x
+JF0;Koromo;;;;;;;;;;;;;x
+JF1;Kariya;;;;;;;;;;;;;x
+JF2;Nishibata;;;;;;;;;;;;;x
+JF3;Nishio;;;;;;;;;;;;;x
+JF4;Okazaki;;;;;;;;;;;;;x
+JF5;Tahara;;;;;;;;;;;;;x
+JF6;Yoshida;;;;;;;;;;;;;x
+JF7;Shinshiro;;;;;;;;;;;;;x
+JF8;Hamamatsu;;;;;;;;;;;;;x
+JF9;Yokosuka;;;;;;;;;;;;;x
+JG0;Kakegawa;;;;;;;;;;;;;x
+JG1;Sagara;;;;;;;;;;;;;x
+JG2;Numazu;;;;;;;;;;;;;x
+JG3;Odawara;;;;;;;;;;;;;x
 JAI;Jaipur;Jaipur;Jaipur;;;;;;;;;;;x
 JAL;Futa Jallon;;;;;;;;;;;;;x
 JAM;Jamaica;Jamaï¿½que;Jamaica;;;;;;;;;;;x
