fix for loc error

--- a/TGC/localisation/00_countries-names.csv
+++ b/TGC/localisation/00_countries-names.csv
@@ -488,7 +488,7 @@ JE4;Komoro;;;;;;;;;;;;;x
 JE5;Iwamurada;;;;;;;;;;;;;x
 JE6;Okutono;;;;;;;;;;;;;x
 JE7;Suwa;;;;;;;;;;;;;x
-JE8;Takatoh;;;;;;;;;;;;;x
+JE8;Takatô;;;;;;;;;;;;;x
 JE9;Iida;;;;;;;;;;;;;x
 JF0;Koromo;;;;;;;;;;;;;x
 JF1;Kariya;;;;;;;;;;;;;x
